--- a/kernel/vbus/devices/venet/Makefile
+++ b/kernel/vbus/devices/venet/Makefile
@@ -1,1 +1,7 @@
-obj-$(CONFIG_VBUS_VENETTAP) += venet-tap.o
+venet-device-objs += device.o
+ifneq ($(CONFIG_VBUS_VENETTAP),n)
+venet-device-objs += tap.o
+endif
+
+obj-$(CONFIG_VBUS_VENETDEV) += venet-device.o
+
